Grace/tests/gibbs/errors/t245.grace
// ERROR = P1040
if((6 * 9) == 42) then

print "No fish for you!"
